fix line breaks

--- a/www/index.html
+++ b/www/index.html
@@ -144,16 +144,16 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
   <div id="wrapper">
       <h1 id="campjsdokkuserver">campjs dokku server</h1>
 
-<p>This server lives at <a href="http://www.iii.campjs.com">http://www.iii.campjs.com</a>. </p>
+<p>This server lives at <a href="http://www.iii.campjs.com">http://www.iii.campjs.com</a>.</p>
 
-<p>It uses <a href="https://github.com/progrium/dokku">dokku</a>, a light-weight mini<br/>
-heroku running docker containers. </p>
+<p>It uses <a href="https://github.com/progrium/dokku">dokku</a>, a light-weight mini
+heroku running docker containers.</p>
 
-<p>Here&#8217;s a quick tutorial about how to get set up. </p>
+<p>Here&#8217;s a quick tutorial about how to get set up.</p>
 
 <h2 id="howtoaddyourkeystothedokkuserver">How to add your keys to the dokku server</h2>
 
-<p>Supply your email as a paramete to the <code>add@iii.campjs.com</code> address, and use<br/>
+<p>Supply your email as a paramete to the <code>add@iii.campjs.com</code> address, and use
 the password <code>campjs</code> when prompted.</p>
 <pre><code class="bash">$ cat ~/.ssh/id_rsa.pub | ssh add@iii.campjs.com your@email.com
 add@iii.campjs.com&apos;s password:
@@ -183,7 +183,7 @@ Node.js app detected
 
 <h2 id="howtoremoveyourkeysfromthedokkuserver">How to remove your keys from the dokku server</h2>
 
-<p>Supply your email as a paramete to the <code>remove@iii.campjs.com</code> address, and use<br/>
+<p>Supply your email as a paramete to the <code>remove@iii.campjs.com</code> address, and use
 the password <code>campjs</code> when prompted.</p>
 <pre><code class="bash">$ ssh remove@iii.campjs.com your@email.com
 remove@iii.campjs.com&apos;s password:
@@ -192,7 +192,7 @@ Removing &apos;your@email.com&apos; from dokku</code></pre>
 
 <h2 id="howtogeneratekeysifyoudonthavethem">How to generate keys (if you don&#8217;t have them)</h2>
 
-<p>For newbies who don&#8217;t use ssh, here&#8217;s the incantation to create your own key<br/>
+<p>For newbies who don&#8217;t use ssh, here&#8217;s the incantation to create your own key
 pair:</p>
 <pre><code class="bash">$ ssh-keygen -t rsa -C &quot;your@email.com&quot;
 Generating public/private rsa key pair.
